--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "lucide-react": "^0.468.0",
     "mongoose": "^8.9.5",
     "next-themes": "^0.4.4",
+    "qr-scanner": "^1.4.2",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
