added  "target": "ES2022",     "module": "ESNext" in tsconfig.json to enable top-level await

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+     "target": "ES2022",
+    "module": "ESNext"
   }
 
 }
